--- a/back_103.html
+++ b/back_103.html
@@ -103,82 +103,153 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Pull-Ups</div>
-            <div class="card-body text-center">
-              <img src="pull_ups.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(5 sets | 10, 10, 10, 10 , 10)</i></p>
-              <p><i>*Use a modified pull-up machine if body weight is too heavy*</i></p>
-              <p><u>Info</u>: There will be 5 sets. Each will emphasize high repetitions with good form. Use a wide grip to focus more on the back.</p>
-              <p><u>Form</u>: Grab the bar just outside of shoulder width apart. Lean back slightly and pull yourself up, focusing on your back contraction. Bring your chin to the bar then lower yourself until you’re at a dead hang.</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Pull-Ups</div>
+          <img class="card-img-top" src="pull_ups.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 sets | 10, 10, 10, 10 , 10)</i></p>
+            <p class="card-text text-center text-danger"><i><b>*Use a modified pull-up machine if body weight is too heavy*</b></i></p>
+            <p class="card-text"><u>Info</u>: There will be 5 sets. Each will emphasize high repetitions with good form. Use a wide
+              grip to focus more on the back.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar just outside of shoulder width apart. Lean back slightly and pull yourself
+              up, focusing on your back contraction. Bring your chin to the bar then lower yourself until you’re at a
+              dead hang.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header text-center h5">Barbell Rows</div>
+          <img class="card-img-top" src="row_bb.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 sets | 15, 12, 10, 4-4-4, 4-4-4)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 5 sets. Start with a weight you can focus on control for higher repetitions
+              and increase the weight 10-15% the following 2 sets. The last 2 sets increase the weight another 10% or
+              to a weight that is attainable for 8 reps and perform a cluster set where reps are done in 3, 4 rep
+              increments with a 20 second rest in between.</p>
+            <p class="card-text"><u>Form</u>: Keep your feet at a standard standing width. With an arched back, bend at the knees to
+              pick up the barbell with palms facing toward you. Lift your chest and slightly straighten your legs to
+              pick the bar up. Bring the bar from a dead hang toward you, keeping your arms close to your sides.
+              Pretend you are squeezing and egg between your shoulder blades. Contract at the top and lower to a
+              dead hang.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Barbell Rows</div>
-            <div class="card-body text-center">
-              <img src="row_bb.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(5 sets | 15, 12, 10, 4-4-4, 4-4-4)</i></p>
-              <p><u>Info</u>: There will be 5 sets. Start with a weight you can focus on control for higher repetitions and increase the weight 10-15% the following 2 sets. The last 2 sets increase the weight another 10% or to a weight that is attainable for 8 reps and perform a cluster set where reps are done in 3, 4 rep increments with a 20 second rest in between.</p>
-              <p><u>Form</u>: Keep your feet at a standard standing width. With an arched back, bend at the knees to pick up the barbell with palms facing toward you. Lift your chest and slightly straighten your legs to pick the bar up. Bring the bar from a dead hang toward you, keeping your arms close to your sides. Pretend you are squeezing and egg between your shoulder blades. Contract at the top and lower to a dead hang.</p>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Rack Pulls X Dumbbell Rows</div>
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="rack_pulls.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="row_db.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 10x10, 10x10, 10x8, 10x8)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Perform rack pulls for the first part of the set and keep the
+              weight constant throughout all 4 sets. Superset with dumbbell rows and increase the weigh 10-15% for
+              the last 2 sets.</p>
+            <p class="card-text"><u>Form</u>: For the rack pulls, have a barbell place in a rack so that the bar is slightly above your
+              knees. Grasp the bar just outside your legs with your feet in a neutral standing position. Slightly
+              bend your knees and keep an arch in your back. Stand up and straighten your back to pick the bar up,
+              then slide it along your leg to lower it back down to the rack.</p>
+            <p class="card-text">For the dumbbell rows, place one hand in front of you on a bench, grasp a dumbbell with the other hand
+              and lift it up so that it is at a dead hang and your back is parallel with the ground. Keeping your
+              elbow close to your body, row the dumbell toward your hip and bring your elbow up to achieve a squeeze
+              in the back. Lower the dumbbell back to a dead hang.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header text-center h5">Seated Cable Rows</div>
+          <img class="card-img-top" src="row_cable.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 20, 15, AMRAP)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Perform this exercise using a the close grip attachment. Increase
+              the weight 10-15% each set. For the last set, perform as many reps as possible.</p>
+            <p class="card-text"><u>Form</u>: Grabbing the close grip attachment, use your legs to push yourself away from the weight
+              stack. Slightly lean forward and allow the weight to stretch out your back. As you start to pull the
+              handle toward you, keeping your elbows close to your body and pulling toward your belly button, start
+              leaning back until you slightly lean back when you squeeze the weight. Return to slightly leaning
+              forward with the weight stretching the back.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Rack Pulls X Dumbbell Rows</div>
-            <div class="card-body text-center">
-              <img src="rack_pulls.jpg" class="img-fluid" alt="Responsive image">
-              <img src="row_db.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 10x10, 10x10, 10x8, 10x8)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Perform rack pulls for the first part of the set and keep the weight constant throughout all 4 sets. Superset with dumbbell rows and increase the weigh 10-15% for the last 2 sets.</p>
-              <p><u>Form</u>: For the rack pulls, have a barbell place in a rack so that the bar is slightly above your knees. Grasp the bar just outside your legs with your feet in a neutral standing position. Slightly bend your knees and keep an arch in your back. Stand up and straighten your back to pick the bar up, then slide it along your leg to lower it back down to the rack.</p>
-              <p>For the dumbbell rows, place one hand in front of you on a bench, grasp a dumbbell with the other hand and lift it up so that it is at a dead hang and your back is parallel with the ground. Keeping your elbow close to your body, row the dumbell toward your hip and bring your elbow up to achieve a squeeze in the back. Lower the dumbbell back to a dead hang.</p>
+    <div class="container">
+      <div class="card-deck mx-auto" style="max-width: 36rem;">
+        <div class="card">
+          <div class="card-header text-center h5">Lat Pushdowns X Lat Pulldowns X Lat Pulldowns (underhand grip)</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="lat_pushdown.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="lat_pulldown.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="lat_pulldown_underhand.jpg" alt="Third slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 10x10x10, 10x10x10, 8x8x8, 8x8x8)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Start with the lat pushdowns with an emphasis on control.
+              Immediately after, perform lat pull downs with a wide grip. Last, switch to a close, underhand grip and
+              perform reverse lat pulldowns. Keep the weight constant through each set and decrease the weight the
+               last 2 sets.</p>
+            <p class="card-text"><u>Form</u>: For the lat pushdowns, stand up and grip the bar overhead with a shoulder width grip.
+              Lean forward so that the rested bar creates a straight line to your hips. With the lean and while
+              keeping your arms straight, bring the bar from above your head to your hips. Return to above your
+               head.</p>
+            <p class="card-text">For the lat pulldowns, grip the bar slightly outside of shoulder width. Secure yourself in the seat
+              and hold the bar so it is straight above your head. Lean back slightly and pull the bar toward your
+               chin. Make sure that the bar gets below your chin with a slight lean back, and let the bar slowly
+               return to above your head. Move forward with a smooth motion while returning the bar upward so that
+               it creates a straight line once again above you.</p>
+            <p class="card-text">For the second lat pulldowns, grip the bar about shoulder width with your palms facing inward. The
+              form will be exactly the same, just with a new grip.</p>
           </div>
         </div>
       </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Seated Cable Rows</div>
-            <div class="card-body text-center">
-              <img src="row_cable.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 20, 15, AMRAP)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Perform this exercise using a the close grip attachment. Increase the weight 10-15% each set. For the last set, perform as many reps as possible.</p>
-              <p><u>Form</u>: Grabbing the close grip attachment, use your legs to push yourself away from the weight stack. Slightly lean forward and allow the weight to stretch out your back. As you start to pull the handle toward you, keeping your elbows close to your body and pulling toward your belly button, start leaning back until you slightly lean back when you squeeze the weight. Return to slightly leaning forward with the weight stretching the back.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Lat Pushdowns X Lat Pulldowns X Lat Pulldowns (underhand grip)</div>
-            <div class="card-body text-center">
-              <img src="lat_pushdown.jpg" class="img-fluid" alt="Responsive image">
-              <img src="lat_pulldown.jpg" class="img-fluid" alt="Responsive image">
-              <img src="lat_pulldown_underhand.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 10x10x10, 10x10x10, 8x8x8, 8x8x8)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Start with the lat pushdowns with an emphasis on control. Immediately after, perform lat pull downs with a wide grip. Last, switch to a close, underhand grip and perform reverse lat pulldowns. Keep the weight constant through each set and decrease the weight the last 2 sets.</p>
-              <p><u>Form</u>: For the lat pushdowns, stand up and grip the bar overhead with a shoulder width grip. Lean forward so that the rested bar creates a straight line to your hips. With the lean and while keeping your arms straight, bring the bar from above your head to your hips. Return to above your head.</p>
-              <p>For the lat pulldowns, grip the bar slightly outside of shoulder width. Secure yourself in the seat and hold the bar so it is straight above your head. Lean back slightly and pull the bar toward your chin. Make sure that the bar gets below your chin with a slight lean back, and let the bar slowly return to above your head. Move forward with a smooth motion while returning the bar upward so that it creates a straight line once again above you.</p>
-              <p>For the second lat pulldowns, grip the bar about shoulder width with your palms facing inward. The form will be exactly the same, just with a new grip.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
+    
 </html>
