--- a/legs_101.html
+++ b/legs_101.html
@@ -159,12 +159,17 @@
             <p class="card-text text-center"><i>(4 sets | 15, 15, 12, 12)</i></p>
             <p class="card-text"><u>Info</u>: There will be 4 sets. Start with a weight you can focus on control for higher repetitions.
                After 2 sets, increase the weight 10-15% and lower the repetitions for the remaining 2 sets.</p>
-            <p class="card-text"><u>Form</u>: Standing on an elevated surface so that your heels are hanging off the step, lower your 
+            <p class="card-text"><u>Form</u>: Standing on an elevated surface so that your heels are hanging off the step, lower your
               heels so that it stretches the calves. Flex your calves and move so that you’re standing on your
               tippy-toes to contract the calves. Lower yourself slowly back to the starting position.</p>
           </div>
         </div>
       </div>
     </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
+
 
 </html>
