--- a/login.html
+++ b/login.html
@@ -108,11 +108,12 @@
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
                   <input type="email" class="form-control" id="exampleInputEmail1.1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <div id ="failemail" style="display:none;color:red"> Incorrect email</div>
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Password</label>
                   <input type="password" class="form-control" id="exampleInputPassword1.1" placeholder="Enter password">
-                  <div class = "passed" style="display:none;color:red"> test </div>
+                  <div id = "failpass" style="display:none;color:red"> Incorrect password </div>
                 </div>
                 <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
